# scriptbook

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_en.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  vite.config.js  vitest.config.js
agents/: build.sh
agents/claude/: Dockerfile
agents/iflow/: Dockerfile  entrypoint.py
content/: example.md  test_cases.md
docs/: changelog.md  checklist.md  development.md  git.md  release.md  style.md
examples/: bash.md  code-interpreter.sandbox  ex.layout.json  example.bash.tl  example.claude.sandbox  example.iflow.sandbox  example.md  example.sandbox  example.sh.sandbox  markdown-syntax.md  markdown_syntax.md  test_cases.md
src/backend/: __init__.py  cli.py  config.py  conftest.py  main.py  test_file_scanner.py  test_markdown_parser.py  test_plugin_manager.py  test_script_executor.py
src/backend/agents/claude/: Dockerfile  entrypoint.py
src/backend/agents/iflow/: entrypoint.py
src/backend/core/: markdown_parser.py  plugin_manager.py  script_executor.py
src/backend/handlers/: control_handler.py  file_handler.py  sandbox_handler.py  sandbox_ws_handler.py
src/backend/models/: schemas.py
src/backend/routers/: markdown.py  plugins.py  scripts.py
src/backend/sandbox/: __init__.py  base.py  local_docker.py  manager.py  opensandbox.py
src/backend/tests/: test_file_scanner.py  test_markdown_parser.py  test_plugin_manager.py  test_script_executor.py
src/backend/utils/: file_system.py
src/frontend/: App.vue  config.js  index.html  style.css
src/frontend/api/: files.js  sandbox.js
src/frontend/components/: Dialog.vue  ErrorBanner.vue  FileList.vue  Layout.vue  MarkdownViewer.vue  QuickOpen.vue  Sandbox.vue  SandboxChat.vue  TabBar.vue  Terminal.vue  TilingLayout.vue
src/frontend/composables/: connectionId.js  useControlSocket.js  useError.js  useErrorHandler.js  useLayoutPersistence.js  useMarkdownContent.js  useResizable.js  useSandboxChatHandlers.js  useTabs.js  useTerminal.js  useTerminalWebSocket.js  useTilingLayout.js
src/frontend/css/: main.css
src/frontend/js/: main.js
src/frontend/js/components/: App.test.js  App.vue  TerminalModal.vue
src/frontend/plugins/theme-github/: manifest.json
src/frontend/plugins/theme-github-dark/: manifest.json
src/frontend/utils/: markdown.js
src/frontend/utils/markdown-plugins/: bash-execute.js
src/integration_tests/: README.md  conftest.py  test_sop_online_pytest.py  test_websocket_integration.py
src/scriptbook/: __init__.py  cli.py  main.py
src/scriptbook/core/: markdown_parser.py  plugin_manager.py  script_executor.py
src/scriptbook/routers/: markdown.py  plugins.py  scripts.py
src/scriptbook/static/: index.html
src/scriptbook/static/css/: main.css
src/scriptbook/static/js/: app.js  plugin-loader.js  terminal-manager.js
src/sop_online/: __init__.py  cli.py  main.py
src/sop_online/core/: markdown_parser.py  plugin_manager.py  script_executor.py
src/sop_online/models/: schemas.py
src/sop_online/routers/: markdown.py  plugins.py  scripts.py
src/sop_online/static/: index.html
src/sop_online/static/css/: main.css
src/tests/: conftest.py  test_file_scanner.py  test_markdown_parser.py  test_plugin_manager.py  test_report.py  test_script_executor.py
src/tests/js/: app.test.js  output-optimizers.test.js  package.json  plugin-loader.test.js  script-results-persistence-integration.test.js  setup.js  terminal-manager.test.js  test_debug.js
test/: api.spec.js  bash.spec.js  debug-terminal.mjs  e2e.test.mjs  error-handling.spec.js  execute-command.spec.js  features.test.mjs  file-switch-terminal.test.mjs  helpers.js  index.mjs  integration.test.mjs  interactive.test.mjs  long-text-wrap.test.mjs  markdown_syntax.spec.js  refresh-persistence.test.mjs  run-button.test.mjs  sandbox-ws.spec.js  sandbox.spec.js  script-state.test.mjs  terminal.spec.js  theme-color.test.mjs  tiling-layout.spec.js
test/config/: sandbox.toml
test/python/: conftest.py  test_api.py  test_file_system.py  test_sandbox_ws.py
tools/: execute_markdown_script.py  gen_toc.py
(+12 files in other folders)
