[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sop-online"
version = "1.0.0"
description = "SOP Online - Interactive web platform for executing Standard Operating Procedures (SOP) with embedded scripts"
authors = [
    {name = "lzy", email = "forlearn_lzy@163.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "markdown>=3.5",
    "websockets>=12.0",
    "watchdog>=3.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.3.0",
]

[project.scripts]
sop_online = "sop_online.cli:main"

[project.urls]
Homepage = "https://github.com/lengmoXXL/sop_online"
Repository = "https://github.com/lengmoXXL/sop_online"
Issues = "https://github.com/lengmoXXL/sop_online/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sop_online"]

[tool.uvicorn]
port = "8000"
host = "127.0.0.1"
