[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptbook"
version = "2.1.6"
description = "ScriptBook - Interactive terminal and document browser with web interface"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tornado>=6.4",
    "terminado>=0.18",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0.0",
    "requests>=2.31",
    "websockets>=12.0",
]

[project.scripts]
scriptbook = "backend.main:main"

[tool.setuptools]
# Find Python packages
packages.find = { where = ["src"], include = ["backend*"] }

# Include non-package files (root level documents, configs, etc.)
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.js", "*.css", "*.html"]
"src.backend" = ["*.py", "*.pyi"]
"backend" = ["static/*", "static/**/*"]

# Exclude test files from package data
# exclude-package-data = { "*" = ["test/*", "test/**/*"] }


